0024799: [regression] BRepAlgoAPI_Common returns empty result To track the modification of the source vertices, the new vertices, created in PostTreatFF, have been added to myShapesSD map.